--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>SI - SISTEMA DE INFORMAÇÃO</title>
+<title>Sistema-Laudo (Principal)</title>
 
 <!-- ✅ PWA -->
 <link rel="manifest" href="manifest.json">
@@ -23,13 +23,14 @@
     --txt:#f5fbff;
     --muted:rgba(255,255,255,.78);
 
-    --accent:#17e3a6;
-    --accent2:#2196f3;
-
     --shadow:0 18px 40px rgba(0,0,0,.32);
     --shadow2:0 6px 24px rgba(0,0,0,.24);
 
     --r22:22px;
+
+    --accent:#00d36d;
+    --accent2:#00a651;
+    --danger:#ff4d4d;
   }
 
   *{box-sizing:border-box}
@@ -38,14 +39,12 @@
   body{
     margin:0;
     font-family:"Segoe UI", Roboto, Arial, sans-serif;
-    color:var(--txt);
-    height:100vh;
-    overflow:hidden; /* ✅ ZERO SCROLL */
     background: linear-gradient(90deg, var(--bgA) 0%, var(--bgB) 60%, var(--bgC) 100%);
-    position:relative;
+    color:var(--txt);
+    overflow:hidden; /* ✅ zero scroll */
   }
 
-  /* ✅ marca d’água discreta */
+  /* ✅ Marca d’água */
   .watermark{
     position:fixed;
     top:88px;
@@ -54,22 +53,26 @@
     height:calc(100vh - 110px);
     background:url("logo/logotipo.png") no-repeat right center;
     background-size:contain;
-    opacity:.08;
+    opacity:.07;
     pointer-events:none;
     z-index:0;
     filter: saturate(.9) contrast(1.05);
   }
 
-  .app{
+  /* ✅ Shell */
+  .shell{
     height:100vh;
     display:flex;
     flex-direction:column;
+    max-width:1180px;
+    margin:0 auto;
+    padding:18px;
     position:relative;
     z-index:1;
   }
 
   /* ✅ Header */
-  header{
+  .hdr{
     height:84px;
     padding:14px 22px;
     display:flex;
@@ -77,307 +80,285 @@
     justify-content:space-between;
     border-bottom:1px solid rgba(255,255,255,.12);
     background: linear-gradient(180deg, rgba(0,0,0,.22), rgba(0,0,0,.00));
+    border-radius: var(--r22);
     backdrop-filter: blur(10px);
+    box-shadow: var(--shadow2);
+    flex:0 0 auto;
   }
 
-  .brand{
-    display:flex;
-    align-items:center;
-    gap:14px;
-    min-width: 320px;
-  }
-
+  .brand{display:flex;align-items:center;gap:14px;min-width:320px;}
   .brand img{
-    width:170px;
-    max-height:52px;
-    height:auto;
-    object-fit:contain;
-    display:block;
+    width:170px;max-height:52px;height:auto;object-fit:contain;display:block;
     filter: drop-shadow(0 10px 16px rgba(0,0,0,.35));
   }
-
-  .brand-info{
-    display:flex;
-    flex-direction:column;
-    line-height:1.05;
-  }
-
+  .brand-info{display:flex;flex-direction:column;line-height:1.05;color:var(--txt);}
   .brand-info strong{
-    font-size:14px;
-    letter-spacing:.20em;
-    text-transform:uppercase;
-    font-weight:900;
+    font-size:14px;letter-spacing:.20em;text-transform:uppercase;font-weight:900;
     color: rgba(255,255,255,.92);
   }
+  .brand-info span{margin-top:6px;font-size:12px;color:rgba(255,255,255,.68);}
 
-  .brand-info span{
-    margin-top:6px;
-    font-size:12px;
-    color:rgba(255,255,255,.68);
-  }
-
-  .hdr-right{
+  /* ✅ Card Desenvolvedor */
+  .dev-card{
     display:flex;
+    flex-direction:column;
     align-items:center;
-    gap:10px;
-  }
-
-  .pill{
-    padding:9px 12px;
+    justify-content:center;
+    text-align:center;
+    padding:10px 16px;
     border-radius:999px;
     border:1px solid rgba(255,255,255,.18);
     background: rgba(0,0,0,.18);
-    font-size:12px;
-    color:rgba(255,255,255,.86);
-    letter-spacing:.04em;
-    user-select:none;
-    backdrop-filter: blur(10px);
     box-shadow: var(--shadow2);
+    backdrop-filter: blur(10px);
+    min-width:260px;
+  }
+  .dev-card .name{
+    font-weight:1000;
+    letter-spacing:.20em;
+    text-transform:uppercase;
+    font-size:13px;
+    color:rgba(255,255,255,.96);
+    line-height:1.1;
+  }
+  .dev-card .role{
+    margin-top:4px;
+    font-size:11px;              /* ✅ menor */
+    letter-spacing:.22em;
+    text-transform:uppercase;
+    color:rgba(255,255,255,.72);
+    line-height:1.1;
   }
 
-  /* ✅ Layout: 1 coluna */
-  main{
-    flex:1;
-    min-height:0;
-    display:grid;
-    grid-template-columns: 1fr;  /* ✅ sem lateral */
-    gap:18px;
-    padding:18px 22px 22px;
-    height:calc(100vh - 84px);
-    position:relative;
-    z-index:1;
-    max-width: 1060px;
-    margin: 0 auto;
-  }
-
-  /* ✅ Painel */
-  .panel{
-    min-height:0;
+  /* ✅ Main card */
+  .card{
+    margin-top:14px;
     border-radius: var(--r22);
     border:1px solid var(--line);
     background: linear-gradient(180deg, var(--glass), var(--glass2));
     box-shadow: var(--shadow);
     overflow:hidden;
+    flex:1 1 auto;
+    min-height:0;
     display:flex;
     flex-direction:column;
   }
 
-  .panel-h{
+  .card-h{
     padding:14px 16px;
     display:flex;
     align-items:center;
     justify-content:space-between;
     border-bottom:1px solid rgba(255,255,255,.10);
+    flex:0 0 auto;
   }
 
-  .panel-h h1{
+  .card-h h1{
     margin:0;
-    font-size:15px;
-    text-transform:uppercase;
+    font-size:14px;
     letter-spacing:.16em;
+    text-transform:uppercase;
     font-weight:900;
   }
 
-  .panel-b{
+  .pill{
+    padding:9px 12px;border-radius:999px;
+    border:1px solid rgba(255,255,255,.18);
+    background: rgba(0,0,0,.18);
+    font-size:12px;color:rgba(255,255,255,.86);
+    letter-spacing:.04em;user-select:none;
+    backdrop-filter: blur(10px);
+    box-shadow: var(--shadow2);
+  }
+
+  .card-b{
     padding:16px;
+    display:grid;
+    grid-template-columns: 1fr 380px;
+    gap:16px;
+    min-height:0;
+    flex:1 1 auto;
+  }
+
+  /* ✅ painel de digitação */
+  .panel{
+    border-radius: var(--r22);
+    border:1px solid rgba(255,255,255,.18);
+    background: rgba(0,0,0,.22);
+    box-shadow: var(--shadow2);
+    overflow:hidden;
     display:flex;
     flex-direction:column;
-    gap:14px;
     min-height:0;
   }
 
-  /* ✅ Digitação rápida */
-  .quick{
-    border-radius: var(--r22);
-    border:1px solid rgba(255,255,255,.20);
-    background: rgba(0,0,0,.20);
-    box-shadow: inset 0 0 0 1px rgba(0,0,0,.22);
-    padding:16px;
-  }
-
-  .q-label{
+  .panel-h{
+    padding:12px 14px;
+    border-bottom:1px solid rgba(255,255,255,.12);
     display:flex;
+    justify-content:space-between;
     align-items:center;
-    gap:10px;
+  }
+
+  .panel-h strong{
     font-size:12px;
+    letter-spacing:.22em;
     text-transform:uppercase;
-    letter-spacing:.10em;
-    color:rgba(255,255,255,.88);
-    user-select:none;
-    margin-bottom:10px;
+    font-weight:900;
+    color:rgba(255,255,255,.92);
   }
 
-  .dot{
-    width:11px;height:11px;border-radius:50%;
-    background:linear-gradient(135deg, var(--accent), var(--accent2));
-    box-shadow: 0 0 0 4px rgba(23,227,166,.14);
-  }
-
-  /* ✅ Guia fixa sempre visível */
   .guide{
-    padding:10px 12px;
-    border-radius:14px;
-    border:1px dashed rgba(255,255,255,.20);
-    background: rgba(255,255,255,.05);
-    font-size:12px;
-    color:rgba(255,255,255,.82);
-    display:flex;
-    flex-wrap:wrap;
-    gap:6px;
-    user-select:none;
-    margin-bottom:10px;
+    font-size:11px;
+    letter-spacing:.12em;
+    color:rgba(255,255,255,.70);
+    text-transform:uppercase;
+    white-space:nowrap;
   }
-  .guide code{
-    font-family:Consolas, "Courier New", monospace;
-    font-size:12px;
-    padding:2px 8px;
-    border-radius:10px;
-    background: rgba(0,0,0,.26);
-    border:1px solid rgba(255,255,255,.12);
+
+  .panel-b{
+    padding:14px;
+    display:flex;
+    flex-direction:column;
+    gap:10px;
+    min-height:0;
   }
 
   textarea{
     width:100%;
-    height:calc(100vh - 360px); /* ✅ garante espaço pro botão e header */
-    min-height:200px;
-    max-height:340px;
+    min-height:0;
+    height:100%;
+    flex:1 1 auto;
     resize:none;
-    border-radius: var(--r22);
+    padding:12px 12px;
+    font-size:14px;
+    line-height:1.35;
+    border-radius:16px;
     border:1px solid rgba(255,255,255,.18);
-    padding:16px;
+    background: rgba(255,255,255,.08);
+    color: rgba(255,255,255,.92);
     outline:none;
-    background: rgba(10,18,26,.65);
-    color: rgba(255,255,255,.96);
-    font-size: 15px;
-    line-height:1.55;
-    white-space:pre-wrap;
     box-shadow: inset 0 0 0 1px rgba(0,0,0,.25);
+    white-space:pre-wrap;
   }
+  textarea::placeholder{ color:rgba(255,255,255,.40); }
 
-  textarea:focus{
-    border-color: rgba(23,227,166,.72);
-    box-shadow: 0 0 0 3px rgba(23,227,166,.18), inset 0 0 0 1px rgba(0,0,0,.25);
-  }
-
-  /* ✅ Botão não some: sempre visível */
+  /* ✅ botões */
   .btn{
-    border:none;
-    cursor:pointer;
-    padding:16px 18px;
-    border-radius: 18px;
-    font-weight:900;
-    letter-spacing:.04em;
-    display:inline-flex;
-    align-items:center;
-    justify-content:center;
-    gap:10px;
     width:100%;
-    background: linear-gradient(135deg, rgba(23,227,166,.96), rgba(33,150,243,.80));
-    color:#06242a;
-    box-shadow: 0 18px 34px rgba(0,0,0,.24);
-    transition: transform .06s ease, filter .2s ease;
-    margin-top:12px;
+    padding:14px;
+    border:none;
+    border-radius:16px;
+    font-weight:1000;
+    letter-spacing:.06em;
+    text-transform:uppercase;
+    cursor:pointer;
   }
-
-  .btn:active{ transform:scale(.99) }
+  .btn-green{ background: linear-gradient(180deg, #19e27b, #00a651); color:#062014; }
+  .btn-green:hover{ filter:brightness(1.04); }
 
   .hint{
-    margin-top:10px;
     font-size:12px;
-    color: rgba(255,255,255,.78);
-    line-height:1.5;
-    user-select:none;
+    color:rgba(255,255,255,.74);
+    line-height:1.4;
+    margin-top:2px;
   }
 
-  /* ✅ campos técnicos ocultos */
-  .tech-hidden{ display:none !important; }
+  /* ✅ campos técnicos (não precisa exibir) */
+  .hidden-tech{ display:none !important; }
 
-  @media (max-width: 980px){
-    textarea{ max-height:320px; }
-    .brand img{ width:160px; max-height:46px; }
+  /* ✅ responsivo */
+  @media (max-width: 1060px){
+    body{overflow:auto;}
+    .shell{height:auto; min-height:100vh;}
+    .card{min-height:720px;}
+    .card-b{grid-template-columns:1fr;}
   }
 </style>
 </head>
 
 <body>
-  <div class="watermark" aria-hidden="true"></div>
+<div class="watermark" aria-hidden="true"></div>
 
-  <div class="app">
-    <header>
-      <div class="brand">
-        <img src="logo/sesctopo.png" alt="SESC" />
-        <div class="brand-info">
-          <strong>SI - SISTEMA DE INFORMAÇÃO</strong>
-          <span>Sistema Laboratorial • Laudos</span>
-        </div>
+<div class="shell">
+  <!-- ✅ Header -->
+  <div class="hdr">
+    <div class="brand">
+      <img src="logo/sesctopo.png" alt="SESC" />
+      <div class="brand-info">
+        <strong>SI - SISTEMA DE INFORMAÇÃO</strong>
+        <span>Sistema de Laudos • Extração e abertura do Laudo</span>
       </div>
+    </div>
 
-      <div class="hdr-right">
-        <div class="pill">Modo Profissional</div>
-        <div class="pill">Popup Central</div>
-      </div>
-    </header>
+    <!-- ✅ Card elegante do desenvolvedor -->
+    <div class="dev-card" aria-label="Desenvolvedor">
+      <div class="name">MARCOS PONTES</div>
+      <div class="role">DESENVOLVEDOR</div>
+    </div>
+  </div>
 
-    <main>
-      <section class="panel">
+  <!-- ✅ Card principal -->
+  <div class="card">
+    <div class="card-h">
+      <h1>Sistema de Laudos</h1>
+      <div class="pill">Zero Scroll • Interface Premium</div>
+    </div>
+
+    <div class="card-b">
+      <!-- ✅ Digitação rápida -->
+      <div class="panel">
         <div class="panel-h">
-          <h1>Digitação rápida</h1>
-          <div class="pill">Extração automática</div>
+          <strong>Digitação Rápida</strong>
+          <div class="guide">Data da Coleta | Data de Nascimento | Cartão SUS | Telefone | Rua</div>
         </div>
 
         <div class="panel-b">
-          <div class="quick">
-            <div class="q-label">
-              <span class="dot"></span>
-              Cole ou digite os dados no campo abaixo
-            </div>
+          <textarea id="entrada_rapida" rows="12" placeholder="MODELO:
+MARIA APARECIDA DA SILVA 000156/2026
+01/12/2025
+18/01/1976
+50037048449
+83985567895
+RUA: LINDOLFO GONÇALVES CHAVES, 900
+BAIRRO: JARDIM SÃO PAULO
+CIDADE: JOÃO PESSOA/PB
+CEP: 58051-200
+SNM"></textarea>
 
-            <div class="guide">
-              Ordem:
-              <code>Data da Coleta</code> |
-              <code>Data de Nascimento</code> |
-              <code>Cartão SUS</code> |
-              <code>Telefone</code> |
-              <code>Rua</code>
-            </div>
+          <button class="btn btn-green" onclick="extrairEAbrir()">
+            Extrair automaticamente e abrir laudo
+          </button>
 
-            <textarea id="entrada_rapida" rows="11"></textarea>
-
-            <button class="btn" onclick="extrairEAbrir()">
-              EXTRAIR AUTOMATICAMENTE E ABRIR LAUDO
-            </button>
-
-            <div class="hint">
-              ✅ Última linha pode ser: <b>SNM</b> ou <b>EAM</b> (Responsável).<br>
-              ✅ O nome não quebra: o exame é detectado por padrão <b>000156/2026</b>.
-            </div>
-          </div>
-
-          <!-- ✅ Campos técnicos existem, mas invisíveis -->
-          <div class="tech-hidden">
-            <input id="paciente" type="text"/>
-            <input id="exame" type="text"/>
-            <input id="data_coleta" type="text" maxlength="10"/>
-            <input id="data_nascimento" type="text" maxlength="10"/>
-            <input id="cartao_sus" type="text"/>
-            <input id="telefone" type="text"/>
-            <input id="rua" type="text"/>
-            <input id="bairro" type="text"/>
-            <input id="cidade" type="text"/>
-            <input id="cep" type="text"/>
-
-            <select id="responsavel">
-              <option value="">Selecione...</option>
-              <option value="SHEINA N. MORAIS RAMALHO">SHEINA N. MORAIS RAMALHO</option>
-              <option value="EDVÂNIA APARECIDA MENDES DE AZEVÊDO">EDVÂNIA APARECIDA MENDES DE AZEVÊDO</option>
-            </select>
-
-            <input id="observacao" type="text"/>
+          <div class="hint">
+            ✅ Última linha pode ser: <b>SNM</b> ou <b>EAM</b> (Responsável).<br>
+            ✅ O nome não quebra: exame detectado por padrão <b>000156/2026</b>.
           </div>
         </div>
-      </section>
-    </main>
+      </div>
+
+      <!-- ✅ Campos de destino (invisíveis - permanecem no código) -->
+      <div class="hidden-tech">
+        <input id="paciente" type="text" />
+        <input id="exame" type="text" />
+        <input id="data_coleta" type="text" />
+        <input id="data_nascimento" type="text" />
+        <input id="cartao_sus" type="text" />
+        <input id="telefone" type="text" />
+        <input id="rua" type="text" />
+        <input id="bairro" type="text" />
+        <input id="cidade" type="text" />
+        <input id="cep" type="text" />
+        <select id="responsavel">
+          <option value="">Selecione...</option>
+          <option value="SHEINA N. MORAIS RAMALHO">SHEINA N. MORAIS RAMALHO</option>
+          <option value="EDVÂNIA APARECIDA MENDES DE AZEVÊDO">EDVÂNIA APARECIDA MENDES DE AZEVÊDO</option>
+        </select>
+        <input id="observacao" type="text" />
+      </div>
+    </div>
   </div>
+</div>
 
 <script>
 function onlyDigits(s){ return (s||"").replace(/\D/g,''); }
@@ -389,13 +370,11 @@ function maskDate(v){
   if(d.length >= 3) return d.replace(/(\d{2})(\d+)/,'$1/$2');
   return d;
 }
-
 function maskCep(v){
   let c = onlyDigits(v).slice(0,8);
   if(c.length > 5) return c.replace(/(\d{5})(\d+)/,'$1-$2');
   return c;
 }
-
 function maskPhone(v){
   let t = onlyDigits(v).slice(0,11);
   if(t.length === 11){
@@ -406,7 +385,6 @@ function maskPhone(v){
   }
   return v;
 }
-
 function setVal(id,val){
   const el = document.getElementById(id);
   if(el) el.value = val;
@@ -424,7 +402,8 @@ function extrairRapidoOrdemCorrigido(){
   const linhas = raw.split(/\r?\n/).map(l => l.trim()).filter(Boolean);
 
   const l1 = linhas[0] || "";
-  let nome = "", exame = "";
+  let nome = "";
+  let exame = "";
 
   const match = l1.match(/(\d{1,6}\/\d{4})\s*$/);
   if(match){
@@ -441,7 +420,8 @@ function extrairRapidoOrdemCorrigido(){
   const sus = onlyDigits(linhas[3] || "");
   const tel = maskPhone(linhas[4] || "");
 
-  let rua="", bairro="", cidade="", cep="", resp="";
+  let rua="", bairro="", cidade="", cep="";
+  let resp="";
 
   for(let i=5;i<linhas.length;i++){
     const line = linhas[i];
@@ -470,7 +450,7 @@ function extrairRapidoOrdemCorrigido(){
   if(resp) document.getElementById("responsavel").value = resp;
 }
 
-/* ✅ ABRIR LAUDO EM JANELA CENTRAL (compacta) */
+/* ✅ ABRIR LAUDO NA MESMA ABA (SEM POPOUT) */
 function abrirLaudo(){
   const paciente = up(document.getElementById('paciente').value);
   const exame = up(document.getElementById('exame').value);
@@ -499,23 +479,9 @@ function abrirLaudo(){
   });
 
   const laudoPath = "laudo.html";
-  const url = laudoPath + "?" + params.toString();
 
-  const w = 900;
-  const h = 680;
-  const left = Math.max(0, (window.screen.width - w) / 2);
-  const top = Math.max(0, (window.screen.height - h) / 2);
-
-  const specs =
-    `width=${w},height=${h},left=${left},top=${top},` +
-    `resizable=yes,scrollbars=yes,status=no,toolbar=no,menubar=no,location=no`;
-
-  const popup = LAUDO_POPUP = window.open(url, "LAUDO_POPUP", specs);
-  if(!popup){
-    window.location.href = url;
-    return;
-  }
-  popup.focus();
+  // ✅ MESMA ABA - evita popout
+  window.location.href = laudoPath + "?" + params.toString();
 }
 
 /* ✅ REGISTRO SERVICE WORKER (PWA) */
@@ -530,5 +496,3 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
-
-
