--- a/laudo.html
+++ b/laudo.html
@@ -35,8 +35,6 @@
     margin:0;
     padding:18px;
     font-family:"Segoe UI", Roboto, Arial, sans-serif;
-
-    /* ✅ Igual ao sistema principal */
     background: linear-gradient(90deg, var(--bgA) 0%, var(--bgB) 60%, var(--bgC) 100%);
   }
 
@@ -273,7 +271,7 @@
     box-sizing:border-box;
   }
 
-  /* ===== PRINT (INTACTO) ===== */
+  /* ===== PRINT (NÃO MEXE) ===== */
   .print-only{ display:none; }
 
   @media print{
@@ -379,6 +377,19 @@
     text-align:center;
     font-family:"Arial Narrow", Arial, sans-serif;
     font-size:11.5pt;
+  }
+
+  /* ✅ ASSINATURA CENTRALIZADA NO PRINT */
+  .assinatura-wrap{
+    display:flex;
+    justify-content:center;
+    margin: 12px 0 10px; /* controla espaço */
+  }
+  .assinatura-img{
+    width: 200px;     /* ajuste de tamanho */
+    height:auto;
+    object-fit:contain;
+    display:block;
   }
 
   @media (max-width: 1100px){
@@ -542,7 +553,7 @@
         </div>
 
         <!-- =========================
-             ✅ PRINT (INTACTO)
+             ✅ PRINT
              ========================= -->
         <div class="print-only">
           <div class="print-bg">
@@ -613,12 +624,19 @@
               <span id="obs_print"></span>
             </div>
 
+            <!-- ✅ Rodapé com assinatura -->
             <div class="rodape-prof">
               <div id="rodape_data"></div>
-              <div style="height:35px;"></div>
+
+              <!-- ✅ assinatura centralizada ENTRE João Pessoa e o nome -->
+              <div class="assinatura-wrap">
+                <img src="assinatura/ass.png" alt="Assinatura" class="assinatura-img">
+              </div>
+
               <div style="font-weight:800;">Dra. Daniele Carvalho Macêdo</div>
               <div>CRM 12077 PB</div>
             </div>
+
           </div>
         </div>
 
@@ -645,7 +663,7 @@
     void document.body.offsetHeight;
   }
 
-  /* ✅ Observação sincronizada (mantida) */
+  /* ✅ Observação sincronizada */
   function syncObservacao(){
     const txt = (document.getElementById("obs_texto_tela")?.value || "").trim();
     const wrap = document.getElementById("obs_print_wrap");
@@ -706,7 +724,7 @@
   function atualizar(){
     const checksEpi = document.querySelectorAll('.epi:checked');
 
-    /* ✅ AUTO-ZONA (mantido) */
+    /* ✅ AUTO-ZONA */
     if(checksEpi.length >= 2){
       const zSim = document.getElementById("zona_sim");
       if(zSim && !zSim.checked) zSim.checked = true;
@@ -766,7 +784,7 @@
     syncObservacao();
   }
 
-  /* ===== Exportação no padrão do sistema (MANTIDA) ===== */
+  /* ===== Exportação no padrão do sistema ===== */
   function mesChaveAtual(){
     const now = new Date();
     const yyyy = now.getFullYear();
@@ -814,23 +832,19 @@
   function voltarSistema(){
     const returnUrl = params.get("return");
 
-    // ✅ se foi aberto como popup, fecha ao voltar (não duplica)
     if(window.opener && !window.opener.closed){
       try{
         if(returnUrl) window.opener.location.href = returnUrl;
         window.close();
         return;
-      }catch(e){
-        // fallback
-      }
+      }catch(e){}
     }
 
-    // fallback normal
     if(returnUrl){ window.location.href = returnUrl; return; }
     if(window.history.length > 1){ window.history.back(); return; }
   }
 
-  /* ✅ IMPRESSÃO DEFINITIVA: via IFRAME invisível (NUNCA imprime branco) */
+  /* ✅ IMPRESSÃO DEFINITIVA: via IFRAME invisível */
   function imprimirLaudo(){
     atualizar();
     syncObservacao();
@@ -883,9 +897,7 @@
         const rules = ss.cssRules;
         if(!rules) continue;
         for(const r of rules) allCSS += r.cssText + "\n";
-      }catch(e){
-        // normal: ignora stylesheets bloqueadas
-      }
+      }catch(e){}
     }
 
     doc.open();
@@ -991,6 +1003,3 @@
 
 </body>
 </html>
-
-
-
